Made all the days and time lable to work really good now in the form validation of the edit Meals : Tasks to do are :Complete edit Meal form validation,Http status indicator and deactivate route

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.html
@@ -1,9 +1,9 @@
-<div>
-    <span>Edit Meal</span>
-    <input placeholder="Meal Lable">
-    <app-time-selector></app-time-selector>
-    <textarea placeholder="Tell what you eat"></textarea>
-    <input placeholder="Total Calories">
+<div class="outerSpan" [formGroup]="fomsGroup">
+    <span class="heading">Edit Meal</span>
+    <input placeholder="Meal Lable" formControlName="lable">
+    <app-time-selector [formGroup]="fomsGroup"></app-time-selector>
+    <textarea placeholder="2 Burgers,Pasta,100ml Cold Drink" formControlName="foods"></textarea>
+    <input placeholder="Total Calories" formControlName="totalCaloreis">
     <button>Use A.I to calculate Calories</button>
     <button>Add</button>
     
