--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/time-selector/time-selector.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/time-selector/time-selector.component.html
@@ -1,1 +1,11 @@
-<input placeholder="time">
+<ng-container [formGroup]="formGroup">
+<div formGroupName="timeOnEat">
+  <input placeholder="00" formControlName="hours">
+  <span>:</span>
+  <input placeholder="00" >
+  <div class="amPmSelector">
+    <span>Am</span>
+    <!-- <span>Pm</span> -->
+  </div>
+</div>
+</ng-container>
