--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/select-days-to-repeat/select-days-to-repeat.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/select-days-to-repeat/select-days-to-repeat.component.css
@@ -6,6 +6,9 @@
 .daysOuterDiv{
     margin-top: 10px;
 }
+span{
+    user-select: none;
+}
 .eachDay{
     display: inline-block;
     margin: 10px;
