Made the form validtion of the time-selection integrating it with the html is left and testing is left made two form with diffrent changes and then comparing values and updating them

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.css
@@ -3,7 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+} 
+ textarea.ng-invalid,.kkk.ng-invalid{
+    outline: 2px solid red;
 }
+
 input,textarea{
     border:0px solid black;
     border-bottom: 2px solid black;
