Everthing is set only some minor changes in the edit meal pop-up component is left like my form is not having a typed structure and i am able to input sting the calories and more over why my array is automatically printed as a stirng in text-area. So checking form srtictness is left and when i patch my form with the value time input is getting a value of 0 so the user exprience is bad he is not able to inset numeber properly unitl he deletes the zero

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/days/days.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/days/days.component.html
@@ -1,4 +1,4 @@
 <div (click)="editIndividualDay()">
-    <div class="innerItems">{{mealLable.mealName}}</div>
+    <div class="innerItems">{{mealLable.lable}}</div>
     
 </div>
