--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-meal/edit-meal.component.html
@@ -1,13 +1,9 @@
 <div class="outerSpan" [formGroup]="fomsGroup">
     <span class="heading">Edit Meal</span>
     <input placeholder="Meal Lable" formControlName="lable">
-    <div>
-    <span>Before Meal</span>
-    <app-time-selector [formGroup]="fomsGroup" [formGroupName]="'timeBefore'"></app-time-selector>
-    </div>
-    <div>
-    <span>On Meal</span>
-    <app-time-selector [formGroup]="fomsGroup" [formGroupName]="'timeOnEat'"></app-time-selector>
+    <div class="timeSelection">
+        <app-meal-timing-selector [timeLable]="'Before Meal'" [formGroup]="fomsGroup" [keyOfForm]="'timeBefore'"></app-meal-timing-selector>
+        <app-meal-timing-selector [timeLable]="'Meal Timming'" [formGroup]="fomsGroup" [keyOfForm]="'timeOnEat'"></app-meal-timing-selector>
     </div>
     <textarea placeholder="2 Burgers,Pasta,100ml Cold Drink" formControlName="foods"></textarea>
     <input placeholder="Total Calories" class="kkk" formControlName="totalCaloreis">
