The reason my form is not typed is because i have not introduced it and more over i didn't change the user input of time selction will do in next turn i just made a parent component store to have a status of storing info

--- a/src/app/components/planner/inner-components/top-bar/top-bar.component.css
+++ b/src/app/components/planner/inner-components/top-bar/top-bar.component.css
@@ -4,8 +4,17 @@
     padding: 5px;
     margin-top: 0px;
     box-shadow: 0px 0px 20px 1px var(--white-color-top-bar-drop-down-shadow);
+    height: 100px;
 }
 img{
     width: 100px;
+    height: 100px;
     border-radius: 50%;
+}
+.outerDivOfTheTopBarComponent{
+    display:flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    height: max-content;
 }
