--- a/src/app/components/planner/inner-components/top-bar/top-bar.component.html
+++ b/src/app/components/planner/inner-components/top-bar/top-bar.component.html
@@ -1,2 +1,5 @@
 <img src="logo.png">
+<div class="outerDivOfTheTopBarComponent">
 <app-clock></app-clock>
+<app-upload-progress-to-backend></app-upload-progress-to-backend>
+</div>
